# CypherpunkPay

./: .coveragerc  .editorconfig  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements.txt
cypherpunkpay/: __init__.py  app.py  common.py  cypherpunkpay.py  exceptions.py  globals.py  interpolate_cypherpunkpay_conf_on_first_install.py  write_example_testnet_xpub_to_conf.py
cypherpunkpay/bitcoin/: __init__.py  bip32.py  helpers.py  ln_invoice.py
cypherpunkpay/config/: config.py  config_parser.py  cypherpunkpay_defaults.conf  cypherpunkpay_dev.conf  cypherpunkpay_test.conf  development.ini  production.ini  test.ini
cypherpunkpay/db/: db.py  dev_examples.py  sqlite_db.py  sqlite_type_assertions.py
cypherpunkpay/explorers/: supported_explorers.py
cypherpunkpay/full_node_clients/: bitcoin_core_client.py  json_rpc_client.py  monero_node_client.py
cypherpunkpay/jobs/: job.py  job_adder.py  job_scheduler.py
cypherpunkpay/lightning_node_clients/: lnd_client.py
cypherpunkpay/ln/: lightning_client.py  lightning_dummy_client.py  lightning_lightningd_client.py  lightning_lnd_client.py
cypherpunkpay/models/: address_credits.py  charge.py  charge_report.py  coin_network_state.py  coin_networks.py  credit.py  dummy_store_order.py  job_report.py  ln_invoice_status.py  user.py
cypherpunkpay/monero/: monero_address_transactions_db.py  monero_tx_db.py  monero_wallet.py
cypherpunkpay/prices/: bisq_price_source.py  cmc_coin_price_source.py  coingecko_coin_price_source.py  cwatch_coin_price_source.py  messari_coin_price_source.py  paprika_coin_price_source.py  price_source.py  price_tickers.py  spotbit_blockchain_commons_source.py
cypherpunkpay/tools/: cryptocurrency_payment_uri.py  fs.py  iter.py  net.py  pbkdf2.py  safe_uid.py  singleton.py  utc.py
cypherpunkpay/usecases/: __init__.py  base_charge_uc.py  calc_monero_address_credits_uc.py  call_merchant_base_uc.py  call_payment_completed_url_uc.py  cancel_charge_uc.py  (+19 more)
debian/: changelog  control  cypherpunkpay.install  cypherpunkpay.links  cypherpunkpay.postinst  cypherpunkpay.prerm  cypherpunkpay.service  cypherpunkpay.triggers  dirs  rules
doc/: Bad Block Explorers.md  Bad Price Sources.md  Bitcoin Core Integration.md  Bitcoin Testnet Faucets LN and onchain.md  Candidate Block Explorers.md  Debian Packager Readme.md  Deployments.md  Developer Setup Troubleshooting.md  History.md  LN.md  Monero.md  Nice Colors.md  TODO
tests/: test_utils.py
(+361 files in other folders)
