[tool.poetry]
name = "cypherpunkpay"
version = "1.0.11"
description = "Modern self-hosted software for accepting Bitcoin on clearnet and onion websites."
homepage = "https://cypherpunkpay.org/"
authors = ["cypherpunkdev"]
license = "Unlicense OR MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyramid = "^2.0"
pyramid-jinja2 = "^2.8"
waitress = "^2.0.0"
PyQRCode = "^1.2.1"
pypng = "^0.0.20"
ecdsa = "^0.17.0"
APScheduler = "^3.7.0"
requests = "^2.26"
PySocks = "^1.7.1"
yoyo-migrations = "^7.3.2"
bitstring = '^3.1.9'
monero = "^0.99"
tzlocal = "2.1"  # newer tzlocal forces pytz shim which de facto requires Python 3.9 (breakes apscheduler)
cffi = "1.15.0"  # pin precise version because we distribute *.so binaries that must precisely match (a hack to support Python 3.6, 3.7, 3.8, 3.9 all at once)

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pysftp = "^0.2.9"
WebTest = "^2.0.35"

[tool.poetry.plugins] # Optional super table
[tool.poetry.plugins."paste.app_factory"]
main = "cypherpunkpay:main"

[tool.poetry.scripts]
cypherpunkpay = "cypherpunkpay.cypherpunkpay:main"
interpolate-cypherpunkpay-conf-on-first-install = "cypherpunkpay.interpolate_cypherpunkpay_conf_on_first_install:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
